--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
   <body>
     <section id="section" class="page1">
       <div class="bg_image">
-        <img src="Images/pages/cod1.jpg" alt="" id="bgImage">
+        <img src="cod1.jpg" alt="" id="bgImage">
       </div>
       
       <div class="container">
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/cod1.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="cod1.jpg" alt="" /> </a>
         </div>
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/cod2.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="cod2.jpg" alt="" /> </a>
         </div>
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/onimusha.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="onimusha.jpg" alt="" /> </a>
         </div>
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/marvel.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="marvel.jpg" alt="" /> </a>
         </div>
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/cod5.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="cod5.jpg" alt="" /> </a>
         </div>
         <div class="image-hover">
-          <a href="#id2"> <img herf="#id2" src="Images/pages/cod3.jpg" alt="" /> </a>
+          <a href="#id2"> <img herf="#id2" src="cod3.jpg" alt="" /> </a>
         </div>
       </div>
 
@@ -45,7 +45,7 @@
     <section id="section" class="page2">
       <div id="id2" class="page2div">
         <div class="bg_image">
-          <img src="Images/pages/cod1.jpg" alt="" id="bgImagePage2">
+          <img src="cod1.jpg" alt="" id="bgImagePage2">
         </div>
         <h1 class="mainHeading">Page 2</h1>
       </div>
